# Kalshiscope

./: .env.example  .gitignore  README.md  analytics.py  bayesian_engine.py  calibration.py  check_balance.py  config.py  grok_client.py  kalshi_client.py  kelly.py  lmsr.py  logging_config.py  main.py  market_scheduler.py  market_state.py  models.py  predictbase_client.py  pyproject.toml  refinement.py  requirements.txt  research_profiles.py  score_engine.py  web3_client.py  xai_provider.py
kalshi/: __init__.py  cli.py
predi/: __init__.py
prompts/: README.md  __init__.py  loader.py
prompts/schema/: trade_decision.yaml
prompts/system/: analyze_market.yaml  analyze_market_deep.yaml  shared_output_rules.yaml
prompts/user/: market_analysis_request.yaml
scripts/: daily_tuning_recommendations.py  pnl_report.py
tests/: conftest.py  test_analytics.py  test_bayesian_engine.py  test_calibration.py  test_config.py  test_execution_funnel.py  test_grok_client.py  test_grok_client_utils.py  test_kalshi_client.py  test_kelly.py  test_lmsr.py  test_logging_config.py  test_main_utils.py  test_market_dedupe.py  test_market_scheduler.py  test_market_state.py  test_phase3_rollout_guards.py  test_position_adjustment.py  test_predictbase_client.py  test_predictbase_snapshot.py  test_prompt_extraction.py  test_reasoning_cycle_integration.py  test_refinement.py  test_research_profiles.py  test_score_engine.py  test_side_flip_guard.py  test_smoke_bot.py  test_trade_gating.py  test_web3_client.py  test_xai_provider.py
tests/fixtures/: predictbase_markets.json
(+13 files in other folders)
