[tool.poetry]
name = "predi"
version = "0.1.0"
description = "Autonomous prediction market trading bot using xAI Grok"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "predi" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.40.0"
xai-sdk = "^1.3.1"
pydantic = "^2.5.0"
requests = "^2.31.0"
web3 = "^6.0.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
predi = "predi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

